improve mobile readability, fix href in 404 page

--- a/source/_sass/_variables.scss
+++ b/source/_sass/_variables.scss
@@ -14,6 +14,7 @@ $font-weight-bold: 600;
 // Font Sizes
 //
 $base-font-size: 0.9rem;
+$large-font-size: 1.1rem;
 
 // Line height
 //
