--- a/source/_sass/base/_typography.scss
+++ b/source/_sass/base/_typography.scss
@@ -1,10 +1,13 @@
 body {
   font-family: $base-font-family;
-  font-feature-settings: "kern", "liga", "pnum";
   font-size: $base-font-size;
   line-height: $base-line-height;
   font-weight: $font-weight-normal;
-  color: $base-font-color; 
+  color: $base-font-color;
+
+  @include media($max-tablet) {
+    font-size: $large-font-size;
+  }
 }
 
 h1,
@@ -19,7 +22,7 @@ h6 {
 }
 
 p {
-  margin: 0 0 $small-spacing;
+  margin: 0 0 $small-spacing;  
 }
 
 a {
